Prepare v0.2 snapshot 6